Closed Bug 1676551 Opened 4 years ago Closed 4 years ago

Intermittent dom/media/test/crashtests/1494073.html | load failed: timed out waiting for reftest-wait to be removed

Categories

(Core :: Audio/Video: Playback, defect, P3)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox82 --- unaffected
firefox83 --- unaffected
firefox84 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: alwu)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(2 files)

Severity: normal → --
Flags: needinfo?(alwu)
Keywords: regression
Priority: P5 → --
Regressed by: 1674597
Has Regression Range: --- → yes

Set release status flags based on info from the regressing bug 1674597

Blocks: mingw-clang

Wrong bug, sorry.

No longer blocks: mingw-clang

In the change from bug1674597, AudioSinkWrapper only handles the promise when we succeed opening AudioSink. However, it forgots to handle the promise when fail to start AudioSink, which would result in missing to dispatch audio ended event.

Assignee: nobody → alwu
Severity: -- → S3
Flags: needinfo?(alwu)
Priority: -- → P3
Attachment #9187195 - Attachment description: Bug 1676551 - handle rejected promise when fail to start the audio sink. → Bug 1676551 - part1 : handle rejected promise when fail to start the audio sink.

As cubeb might call audio stream's state callback very soon after we start cubeb, we have to create the promise beforehand in order to handler the case where we immediately get drained.

Depends on D96738

Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/78467d6287e4
part1 : handle rejected promise when fail to start the audio sink. r=padenot
https://hg.mozilla.org/integration/autoland/rev/16268272ae0a
part2 : create promise before calling cubeb start. r=padenot
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: