Bug 1676551 - part2 : create promise before calling cubeb start. r=padenot

As cubeb might call audio stream's state callback very soon after we start cubeb, we have to create the promise beforehand in order to handle the case where we immediately get `drained`.

Differential Revision: https://phabricator.services.mozilla.com/D96770